Resolves: tdf#103994 AdjustReferenceOnMove: handle external references

Change-Id: I8b104b0c843dd268d8760a2a73cdd3e672e6efd6
(cherry picked from commit 4665be3af48587505bb7f49a53e8422945ec49eb)
Reviewed-on: https://gerrit.libreoffice.org/30941
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Markus Mohrhard <markus.mohrhard@googlemail.com>
(cherry picked from commit 5e397250c0ab2c092091c6dfe30d906a17fdca9e)